
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int * gdImagePtr ;


 int fprintf (int ,char*) ;
 int * gdImageCreateFromGifPtr (int,char*) ;
 int gdImageDestroy (int *) ;
 int * gifdata ;
 int stderr ;

int main(void) {
  gdImagePtr im;
  if ( ( im = gdImageCreateFromGifPtr(8994,
          (char*) &gifdata[0]) ) != ((void*)0)) {
    fprintf(stderr, "success!\n");
    gdImageDestroy(im);
  } else {
    fprintf(stderr, "failed!\n");
  }
  return 0;
}
